--- a/style.css
+++ b/style.css
@@ -81,10 +81,10 @@ h3 {
 /* SECTIONS */
 section {
   margin-bottom: 45px;
-  border: 0.7em double #ddd;
+  border: 10px double #ddd;
   border-radius: 1em;
   padding: 1em;
-  box-shadow: -4px 0 10px 2px #888;
+  box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.08);
 }
 
 /* RESPONSIVE IMAGES */
