--- a/style.css
+++ b/style.css
@@ -1,17 +1,25 @@
 /* BASIC SETUP */
-@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,200;0,300;0,400;1,200&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap');
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 html {
   font-size: 10px;
 }
+
 body {
   font-size: 1.8rem;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Montserrat', sans-serif;
+  color: #343a40;
 }
+
 .container {
   width: 95%;
   margin: 70px auto;
 }
+
 @media screen and (min-width: 1250px) {
   .container {
     max-width: 1180px;
@@ -20,28 +28,32 @@ body {
 
 /* HEADER */
 header {
-  display: inline-block;
-  margin-bottom: 50px;
+  margin-bottom: 48px;
 }
+
 .logo {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-bottom: 48px;
 }
+
 .logo__container {
   max-width: 400px;
 }
+
 .logo__img {
   max-width: 100%;
   display: block;
   height: auto;
 }
+
 h1 {
-  font-family: 'Kanit', sans-serif;
-  font-size: 4.5rem;
-  font-weight: 200;
+  color: #212529;
+  font-size: 6.2rem;
+  font-weight: 700;
   line-height: 1.15;
-  margin: 30px 0 0 0;
+  letter-spacing: -3.5px;
 }
 
 @media screen and (max-width: 900px) {
@@ -53,7 +65,7 @@ h1 {
     margin-top: 30px;
   }
   h1 {
-    font-size: 4rem;
+    font-size: 5.2rem;
   }
 }
 .logo__img--top {
@@ -62,20 +74,13 @@ h1 {
 
 /* HEADINGS */
 h2 {
-  font-family: 'Kanit', sans-serif;
-  font-size: 3rem;
-  font-weight: 300;
-  letter-spacing: 1px;
-  color: rgb(24, 200, 200);
-  margin: 0 0 0.5em 0;
-}
-h3 {
-  font-family: 'Kanit', sans-serif;
-  font-size: 2rem;
-  font-weight: 400;
-  letter-spacing: 0.5px;
-  text-align: center;
-  margin: 0;
+  font-size: 2.4rem;
+  font-weight: 600;
+  letter-spacing: 3px;
+  color: #18c8c8;
+  text-shadow: -1px 0 10px rgba(0, 0, 0, 0.1);
+  margin-bottom: 2.4rem;
+  text-transform: uppercase;
 }
 
 /* SECTIONS */
@@ -101,13 +106,16 @@ figure img {
   justify-content: space-around;
   align-items: center;
 }
+
 .row__text {
   flex: 0 0 45%;
 }
+
 .row__fig {
   flex: 0 0 45%;
   margin: 0;
 }
+
 @media screen and (max-width: 900px) {
   section {
     box-shadow: unset;
@@ -118,60 +126,86 @@ figure img {
 }
 
 /* TEXT */
-.row li {
-  margin-top: 0.6em;
+ul {
+  padding-left: 2.4rem;
 }
-.row li:first-child {
+.row li {
+  margin-bottom: 1.2rem;
+}
+
+.row li:last-child {
   margin: 0;
 }
+
 .row p,
 .row ul {
-  margin: 0 0 1.5em 0;
+  font-size: 1.8rem;
+  margin: 0 0 1.6em 0;
 }
+
 .row p,
 .row ul,
 figcaption {
-  line-height: 1.45em;
+  line-height: 1.6;
   font-weight: 400;
 }
+
 figcaption {
   text-align: center;
 }
+
 .row ul {
   list-style-type: square;
 }
+
 .row li::marker {
-  color: rgb(24, 200, 200);
+  color: #18c8c8;
 }
-@media screen and (max-width: 500px) {
-  body {
-    font-size: 1.5rem;
-  }
-  h1 {
-    font-size: 3rem;
-  }
-  h2 {
-    font-size: 2.5rem;
-  }
-  header {
-    margin-bottom: 30px;
-  }
-  section {
-    margin-bottom: 25px;
-  }
+
+/* FOOTER */
+footer {
+  font-size: 3rem;
+  font-weight: 700;
+  letter-spacing: -1px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
 }
 
 /* LINKS */
+#tribute-link {
+  display: inline-block;
+  text-shadow: -1px 0 10px rgba(0, 0, 0, 0.1);
+}
+
 a,
 a:visited {
-  color: #e79702;
+  color: #c88200;
   text-decoration: none;
   border-bottom: 2px solid transparent;
   padding-bottom: 5px;
   transition: all 0.2s;
 }
+
 a:hover,
 a:active {
   color: #ed1d24;
   border-bottom: 2px solid #ed1d24;
+}
+
+@media screen and (max-width: 500px) {
+  body {
+    font-size: 1.5rem;
+  }
+  h1 {
+    font-size: 4.4rem;
+  }
+  h2 {
+    font-size: 2rem;
+  }
+  footer {
+    font-size: 2.4rem;
+  }
 }
